--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1259.0",
+    "axios": "^1.2.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
+    "csv-writer": "^1.6.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
@@ -18,9 +20,12 @@
     "fetch": "^1.1.0",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "json-2-csv": "^3.18.0",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
+    "mongodb": "^4.13.0",
     "morgan": "~1.9.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
